--- a/assignment1.html
+++ b/assignment1.html
@@ -8,10 +8,10 @@
             <h1>Git</h1>
         </header>
         <ul>
-            <li>apple</li>
-            <li>banana</li>
+            <li>Apple</li>
+            <li>Banana</li>
             <li>Lorem ipsum</li>
-            <li>chocolate</li>
+            <li>Chocolate</li>
         </ul>
     </body>
 </html>
