--- a/assignment1.html
+++ b/assignment1.html
@@ -11,7 +11,7 @@
             <li>Apple</li>
             <li>Banana</li>
             <li>Lorem ipsum</li>
-            <li>Chocolate</li>
+            <li>Choco</li>
         </ul>
     </body>
 </html>
